syntax = "proto3";

package generalmerchant;

message GeneralMerchant {
    int64 id = 1;
    string name = 2;
    repeated string locations = 3;
    repeated string api_tags = 4;
    repeated string scrape_tags = 5;
    string sector = 6;
    string size = 7;
    string expenseBand = 12;
}